# 2025-

./: CMakeLists.txt  adc.c  adc.h  build.sh  gesture.c  gesture.h  i2c.c  i2c.h  main.c  main.py  model.joblib  network.py  neural_network.c  neural_network.h  oled.c  oled.h  sign_mapping.json  test.py  ui.py
